killercoda/assets/envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy
  namespace: keda
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                      headers:
                      - name: "x-keda-http-addon"
                        exact_match: "app-1"
                    route:
                      cluster: interceptor_proxy
                      host_rewrite_literal: app-1
                  - match:
                      prefix: "/"
                      headers:
                      - name: "x-keda-http-addon"
                        exact_match: "app-2"
                    route:
                      cluster: interceptor_proxy
                      host_rewrite_literal: app-2
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  log_format:
                    text_format: "[%RESPONSE_CODE%] [x-keda-http-addon: %REQ(x-keda-http-addon)%] [host: %REQ(HOST)%] []\n"
      clusters:
        - name: interceptor_proxy
          connect_timeout: 10s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: interceptor_proxy
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
                          port_value: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: keda 
spec:
  selector:
    matchLabels:
      app: envoy
  replicas: 1
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.29.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /etc/envoy
      volumes:
      - name: config
        configMap:
          name: envoy
---
apiVersion: v1
kind: Service
metadata:
  name: keda-add-on-http-interceptor-proxy
  namespace: keda
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: envoy
  type: ClusterIP
